Fix image whitespace issue

--- a/app/blog/[title]/[id]/post.module.scss
+++ b/app/blog/[title]/[id]/post.module.scss
@@ -23,7 +23,7 @@
     position: relative;
     width: 60%;
     margin-bottom: $space-lg;
-    
+
     .backButton {
       padding-top: 30px;
       top: 40px;
@@ -82,6 +82,21 @@
         margin: $space-md 0;
         list-style-type: none;
       }
+    }
+  }
+
+  .blogImageContainer {
+    position: relative;
+    margin-bottom: $space-md;
+    @include for-phone-only {
+      width: 250px;
+      height: 200px;
+      max-height: 300px;
+    }
+    @include for-tablet-up {
+      width: 400px;
+      height: 300px;
+      max-height: 300px;
     }
   }
 
